@@ -1,5 +1,6 @@
 Version 6.5.3
 - Implemented NAN() method for Spin2
+- Implemented rename for host (9P) file system
 - Improved error message for objects that are not found
 - Reduced likelihood of duplicate function definitions in sub-objects
 
